infra/deployment/kustomize/base/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-blue
  labels:
    app: webapp
    environment: prod
    version: blue
  namespace: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        environment: prod
        version: blue
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - name: webapp
        image: 364952172961.dkr.ecr.ap-southeast-1.amazonaws.com/webapp-image:prod-blue
        ports:
        - name: webapp
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
        volumeMounts:
          - name: config-volume-blue
            mountPath: /app/.env
            subPath: .env
      volumes:
        - name: config-volume-blue
          configMap:
            name: webapp-config-blue

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-green
  labels:
    app: webapp
    environment: prod
    version: green
  namespace: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        environment: prod
        version: green
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - name: webapp
        image: 364952172961.dkr.ecr.ap-southeast-1.amazonaws.com/webapp-image:prod-green
        ports:
        - name: webapp
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
        volumeMounts:
          - name: config-volume-green
            mountPath: /app/.env
            subPath: .env
      volumes:
        - name: config-volume-green
          configMap:
            name: webapp-config-green
