infra/deployment/kustomize/base/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service-blue
  labels:
    app: webapp
    version: blue
  namespace: webapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: webapp
    version: blue

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service-green
  labels:
    app: webapp
    version: green
  namespace: webapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: webapp
    version: green
